--- a/css/styles.css
+++ b/css/styles.css
@@ -147,14 +147,18 @@ header {
 }
 /* MAIN */
 
-.btn-zamow-usluge {
-  cursor: pointer;
+.btn-order {
   background-color: var(--brand-blue-color);
   border: none;
   font-size: 16px;
   color: var(--white-color);
   padding: 16px 48px;
   border-radius: 4px;
+}
+.btn-order:hover {
+  cursor: pointer;
+  background-color: var(--white-color);
+  color: var(--brand-blue-color);
 }
 
 h1 {
@@ -304,11 +308,11 @@ OUR TEAM
 .social-links-list li a {
   width: 44px;
   height: 44px;
-  cursor: pointer;
   display: flex;
   align-items: center;
   justify-content: center;
   border: none;
+  border-radius: 50%;
   background-color: var(--white-color);
   fill: #afb1b8;
 }
@@ -462,8 +466,8 @@ footer .container {
   border-radius: 4px;
   border-style: none;
   cursor: pointer;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 .portfolio-main-list {
   display: flex;
@@ -475,6 +479,13 @@ footer .container {
   display: flex;
   flex-direction: column;
 }
+.portfolio-main-list-elem:hover {
+  cursor: pointer;
+  border: 1px solid #eeeeee;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
 .portfolio-main-list-elem-text {
   border-bottom: 1px solid #eee;
   border-left: 1px solid #eee;
